# Last-Stand-Engine

./: .gitmodules  CMakeLists.txt  Engine_8h_source.html  Header.txt  LSEngineHeader.txt  LSEngineLicense.txt  LSEngine_8h_source.html  Last-Stand-Engine.vcxproj  Last-Stand-Engine.vcxproj.filters  LicenseHeader.txt  LinuxDeps.sh  README.md  _engine_8h_source.html  _l_s_engine_8h_source.html  annotated.html  annotated_dup.js  build.sh  classEngine.html  class_l_s_engine_1_1_engine-members.html  class_l_s_engine_1_1_engine.html  classes.html  dir_74389ed8173ad57b461b9d623a1f3867.html  dir_74389ed8173ad57b461b9d623a1f3867.js  dir_aceb01513ac9680e5a5ae8e052454feb.html  doxygen.css  files.html  index.html  navtreedata.js  navtreeindex0.js  params.json  tabs.css
API/: LSENGINE  LSENGINE.doxy  README.md
API/html/: Actor2D_8h_source.html  Actor3D_8h_source.html  AudioManager_8h_source.html  Engine_8h_source.html  FileUtils_8h_source.html  File_8h_source.html  IManages_8h_source.html  IRenderable2D_8h_source.html  IRenderable3D_8h_source.html  InputManager_8h_source.html  LSEngine_8h_source.html  Log_8h_source.html  Manager_8h_source.html  Math_8h_source.html  Matrix_8h_source.html  NetworkManager_8h_source.html  OrthographicCamera_8h_source.html  PerspectiveCamera_8h_source.html  Plane_8h_source.html  Quaternion_8h_source.html  SDL_8h.html  SDL_8h.js  SDL_8h_source.html  SDL__assert_8h_source.html  SDL__atomic_8h.html  SDL__atomic_8h.js  SDL__atomic_8h_source.html  SDL__audio_8h.html  SDL__audio_8h.js  SDL__audio_8h_source.html  SDL__bits_8h.html  SDL__bits_8h_source.html  SDL__blendmode_8h.html  SDL__blendmode_8h.js  SDL__blendmode_8h_source.html  SDL__clipboard_8h.html  SDL__clipboard_8h_source.html  SDL__config_8h_source.html  SDL__cpuinfo_8h.html  SDL__cpuinfo_8h.js  (+1768 more)
API/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+31 more)
API/latex/: SDL_8h.tex  SDL__atomic_8h.tex  SDL__audio_8h.tex  SDL__bits_8h.tex  SDL__blendmode_8h.tex  SDL__clipboard_8h.tex  SDL__cpuinfo_8h.tex  SDL__endian_8h.tex  SDL__error_8h.tex  SDL__events_8h.tex  SDL__filesystem_8h.tex  SDL__gamecontroller_8h.tex  SDL__gesture_8h.tex  SDL__haptic_8h.tex  SDL__hints_8h.tex  SDL__joystick_8h.tex  SDL__keyboard_8h.tex  SDL__keycode_8h.tex  SDL__loadso_8h.tex  SDL__log_8h.tex  SDL__main_8h.tex  SDL__mouse_8h.tex  SDL__mutex_8h.tex  SDL__opengl_8h.tex  SDL__opengles_8h.tex  SDL__pixels_8h.tex  SDL__platform_8h.tex  SDL__power_8h.tex  SDL__quit_8h.tex  SDL__rect_8h.tex  SDL__render_8h.tex  SDL__rwops_8h.tex  SDL__scancode_8h.tex  SDL__shape_8h.tex  SDL__stdinc_8h.tex  SDL__surface_8h.tex  SDL__system_8h.tex  SDL__syswm_8h.tex  SDL__test_8h.tex  SDL__test__assert_8h.tex  (+618 more)
Binaries/: README.md
Binaries/OSX/: REAME.md
Docs/: generate.sh
Resources/Data/: Settings.json
Source/: .gitignore  CMakeLists.txt  Engine.cpp  Engine.h  LSEngine.h  README.md  main.cpp  main.h
Source/Audio/: AudioManager.h
Source/Core/: Actor.cpp  Actor.h  Actor2D.cpp  Actor2D.h  Actor3D.cpp  Actor3D.h  Component.h  Dictionary.cpp  Dictionary.h  Entity.h  GlobalSettings.cpp  GlobalSettings.h  IManages.h  Manager.cpp  Manager.h  Renderable.h  Renderable2D.h  Renderable3D.h  Universe.cpp  Universe.h
Source/Core/Audio/: AudioManager.cpp  SoundManager.cpp  SoundManager.h
Source/Core/Camera/: OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Source/Core/DataStructures/: AssetManager.cpp
Source/Core/Engine/: Universe.cpp  Universe.h
Source/Core/Graphics/: Renderable2D.h  Renderable3D.h
Source/Core/Graphics/Actors/: Actor2D.h  Actor3D.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Source/Core/Input/: InputManager.cpp
Source/Core/Math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Source/DataStructures/: AssetManager.h
Source/Engine/: Universe.h
Source/Files/: File.cpp  File.h
Source/Graphics/: Color.cpp  Color.h  IRenderable2D.h  IRenderable3D.h  Renderable2D.h  Renderable3D.h  Window.cpp  Window.h
Source/Graphics/Actors/: Actor2D.cpp  Actor2D.h  Actor3D.cpp  Actor3D.h  OrthographicCamera.cpp  PerspectiveCamera.cpp  PerspectiveCamera.h
Source/Input/: InputManager.h
Source/Math/: Math.cpp  Math.h  Matrix.h  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Source/Networking/: NetworkManager.cpp  NetworkManager.h  Server.cpp  Server.h
Source/Networking/Packets/: Packet.cpp
Source/Private/: Engine.cpp
Source/Private/Graphics/: Color.cpp  Window.cpp
Source/Private/Math/: Vector2.cpp  Vector3.cpp
Source/Private/Networking/: Server.cpp
Source/Private/Networking/Packets/: Packet.cpp
Source/Private/Utils/: Log.cpp  Settings.cpp
Source/Public/: Engine.h  LSEngine.h
Source/Public/Core/: Game.h
Source/Public/Graphics/: Color.h  Window.h
Source/Public/Networking/: Server.h
Source/Public/Networking/Packets/: Packet.h
Source/Public/Utils/: Log.h  Settings.h
Source/Utils/: EngineState.h  FileUtils.h  Log.h  StringUtils.h  Timer.h  Utils.cpp  Utils.h
Source/cmake/Modules/: FindFFMPEG.cmake  FindLua.cmake  FindSteamworks.cmake
Tools/Linux/: GenerateProject.sh  LinuxDeps.sh  README.md
Tools/OSX/: README.md
Tools/Windows/: README.md
cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake
search/: all_0.js  search.css
